--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,15 @@ jobs:
     - name: 🛎️ Checkout Repository
       uses: actions/checkout@v4
       
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        cache: 'pip'
+   - name: 🐍 Set up Python
+  uses: actions/setup-python@v4
+  with:
+    python-version: '3.11'
+
+   - name: 📦 Install Python Dependencies
+     run: |
+       python -m pip install --upgrade pip
+       pip install -r requirements.txt
     
     - name: 📦 Install Python Dependencies
       run: |
