--- a/.github/workflows/update_ta125.yml
+++ b/.github/workflows/update_ta125.yml
@@ -47,7 +47,7 @@ jobs:
           exit 1
         fi
       env:
-        ALPHA_VANTAGE_API_KEY: ${{ secrets.ALPHA_VANTAGE_API_KEY }}
+        ALPHA_VANTAGE_API_KEY: ${{ secrets.ALPHA_VANTAGE_API_KEY_TA125 }}
     
     - name: 🔧 Setup Node.js for Firebase
       uses: actions/setup-node@v4
