--- a/firebase.json
+++ b/firebase.json
@@ -6,28 +6,50 @@
       "**/.*",
       "**/node_modules/**",
       "**/*.py",
-      "requirements.txt",
-      "README.md"
+      "**/*.pyc",
+      "**/__pycache__/**",
+      "README.md",
+      ".github/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/ta125",
+        "destination": "/ta125_ohlcv_latest.json"
+      }
     ],
     "headers": [
       {
-        "source": "**/*_ohlcv_latest.json",
+        "source": "**/*.json",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=86400"
+            "value": "public, max-age=3600"
           },
           {
             "key": "Access-Control-Allow-Origin",
             "value": "*"
           },
           {
-            "key": "Access-Control-Allow-Methods", 
+            "key": "Access-Control-Allow-Methods",
             "value": "GET, OPTIONS"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "Content-Type"
+          }
+        ]
+      },
+      {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=1800"
           }
         ]
       }
     ],
-    "cleanUrls": true
+    "cleanUrls": true,
+    "trailingSlash": false
   }
 }
