--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-yfinance==0.2.32
-requests>=2.25.1
-pandas>=1.3.0
-numpy>=1.21.0
-urllib3>=1.26.0
-lxml>=4.6.0
+requests==2.31.0
+schedule==1.2.0
+pytz==2023.3
