--- a/.github/workflows/weekly-earnings-dividends.yml
+++ b/.github/workflows/weekly-earnings-dividends.yml
@@ -40,14 +40,14 @@ jobs:
         wc -l data/Shazam-Stock-Earn-Div.csv || echo "File not found"
         head -n 20 data/Shazam-Stock-Earn-Div.csv || echo "Cannot display contents"
         
-    - name: Commit and push CSV file
+    - name: Commit and push CSV files
       run: |
-       git config --local user.email "action@github.com"
-       git config --local user.name "GitHub Action"
-       git pull --rebase
-       git add data/Shazam-Stock-Earn-Div.csv
-       git diff --staged --quiet || git commit -m "Update earnings/dividends data - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
-       git push
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git pull --rebase origin main || true
+        git add data/*.csv data/*.json
+        git diff --staged --quiet || git commit -m "Update stock data (TA125, SP500, ETFs) - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
@@ -58,3 +58,4 @@ jobs:
         path: data/Shazam-Stock-Earn-Div.csv
 
         retention-days: 30
+
