--- a/.github/workflows/market-analyzer.yml
+++ b/.github/workflows/market-analyzer.yml
@@ -2,8 +2,8 @@ name: Market Analyzer
 
 on:
   schedule:
-    # Run at 10:00 PM UTC daily (after US market close)
-    - cron: '0 22 * * *'
+    # Run at 04:00 PM UTC daily (after US market close)
+    - cron: '0 4 * * *'
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
@@ -25,7 +25,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas requests beautifulsoup4 lxml
+        pip install pandas requests beautifulsoup4 lxml selenium
+        
+    - name: Install Chrome and ChromeDriver
+      run: |
+        # Install Chrome
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+        
+        # ChromeDriver is automatically managed by Selenium 4.6+
+        echo "✅ Chrome installed"
+        google-chrome --version
         
     - name: Run Market Analyzer
       env:
