Modify cron schedule for Market Analyzer workflow
Updated cron schedule to run daily at 04:00 AM UTC.

--- a/.github/workflows/market-analyzer.yml
+++ b/.github/workflows/market-analyzer.yml
@@ -3,7 +3,7 @@ name: Market Analyzer
 on:
   schedule:
     # Run at 04:00 AM UTC daily (after US market close)
-    - cron: '0 4 * * 2-6'
+    - cron: '0 4 * * *'
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
@@ -72,4 +72,5 @@ jobs:
           data/Shazam-market-daily.html
           data/shazam-tsi-history.csv
         retention-days: 7
+
 
